--- a/css/normalize.css
+++ b/css/normalize.css
@@ -1,6 +1,3 @@
-
-
-
 /* 
 ====================================
 Modified Normalize.css Code 
@@ -11,8 +8,6 @@ It has been modified to remove some of the choices such as font-family, that a d
 */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
-
-
 
 /**
  * 1. Set default font family to sans-serif.
@@ -414,4 +409,148 @@ table {
 td,
 th {
   padding: 0;
+}
+
+/* Lists
+   ========================================================================== */
+
+
+/* 
+Some browsers use margin-left and some padding-left to indent the list. Pick which one you like (or both) and change them here
+*/
+ul, ol{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+/* Set the space between items in a list, usually done with margin-bottom */
+li{
+    margin-bottom: 0;
+}
+
+/*Setting the overall list margin or padding will also effect your nav so make sure you set that specifically.
+You can add other nav styling here if you like such as removing the bullets with list-style none.
+only ul is give here because ol is generally not used with nav
+*/
+nav ul {
+    margin-left:0;
+    padding-left:0;
+    list-style:none;
+}
+
+nav ul li{
+    margin-bottom: 0; /* adding a margin-bottom setting to li elements can help make them readable */
+}
+
+
+/*
+definition lists may be given a top and bottom margin by default (dl element)
+and the definition itself (dd element) is usually indented by default with margin-left or padding-left;
+*/
+
+dl{
+    margin: 0 0 0 0;
+}
+
+dd{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+
+/*blockquotes are set off by default using margins or padding.*/
+blockquote{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+/* this removes any quotes a browser might add to blockquote */
+blockquote, q {
+    quotes:none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content:'';
+    content:none;
+}
+
+
+/*figure are set off by default using margins or padding.*/
+figure{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+
+b,
+strong {
+  font-weight: bold;
+}
+
+/* links and visited links have default colors and underline */
+a {
+    margin:0;
+    padding:0;
+    font-size:100%;
+    vertical-align:baseline;
+    color:inherit;
+    text-decoration: none; /*this controls if the underline is showing */
+    
+    /* some people choose to use a bottom border in place of an underline because it doesn't cut through the descenders in letters like gyjp */
+    /* border-bottom: 1px solid #000; */
+}
+
+a:hover{
+    color:inherit;
+    /* if you set bottom-border on a{} above then remember to change the color here */
+    /* border-bottom: 1px solid #000; */
+}
+
+/* it can help with usability if you give visited links a diffefrent color than unvisited ones (even if just a different shade)*/
+a:visited{
+    color:inherit;
+    
+    /* Again, if you set bottom-border on a{} then remember to change the color here too*/
+    /* border-bottom: 1px solid #000; */
+}
+
+/* change border colour to suit your needs */
+hr {
+    display:block;
+    height:1px;
+    border:0;   
+    border-top:1px solid #000;
+    margin:0 0;
+    padding:0;
+}
+
+/* Lesser Used Elements
+   ========================================================================== */
+
+
+/* change colours to suit your needs */
+ins {
+    background-color:#ff9;
+    color:#000;
+    text-decoration:none;
+}
+
+/* change colours to suit your needs */
+mark {
+    background-color:#ff9;
+    color:#000; 
+    font-style:italic;
+    font-weight:bold;
+}
+
+del {
+    text-decoration: line-through;
+}
+
+abbr[title], dfn[title] {
+    border-bottom:1px dotted;
+    cursor:help;
 }
